--- a/themes/butterfly/source/css/_page/flink.styl
+++ b/themes/butterfly/source/css/_page/flink.styl
@@ -2,7 +2,7 @@
   .flink
     margin-bottom: 20px
 
-    .flink-list
+    .butterfly-flink-list
       overflow: auto
       padding: 10px 10px 0
       text-align: center
@@ -85,3 +85,132 @@
       margin-bottom: 5px
       font-weight: bold
       font-size: 1.5em
+
+#article-container img
+  margin-bottom: 0.5rem;
+  object-fit: cover;
+  max-height: 900px;
+.flexcard-flink-list
+  overflow hidden
+  .flink-list-card
+    .wrapper img
+      transition: transform .5s ease-out !important;
+    &:hover
+      border-color: var(--anzhiyu-main)!important;
+      background-color: var(--anzhiyu-main)!important;
+      box-shadow: var(--anzhiyu-shadow-theme)!important;
+
+  & > a
+    width: calc(100% / 4 - 0.5rem);
+    height 150px
+    position relative
+    display block
+    margin: 0.5rem 0.25rem;
+    float left
+    overflow hidden
+    padding: 0;
+    border-radius: 8px;
+    transition all .3s ease 0s, transform .6s cubic-bezier(.6, .2, .1, 1) 0s
+    box-shadow none
+    border: var(--style-border)!important;
+    &:hover
+      .info
+        transform translateY(-100%)
+      .wrapper
+        img
+          transform scale(1.2)
+      &::before
+        position: fixed
+        width:inherit
+        margin:auto
+        left:0
+        right:0
+        top:10%
+        border-radius: 10px
+        text-align: center
+        z-index: 100
+        content: attr(data-title)
+        font-size: 20px
+        color: #fff
+        padding: 10px
+        background-color: rgba($theme-color,0.8)
+
+    .cover
+      width 100%
+      transition transform .5s ease-out
+    .wrapper
+      position relative
+      .fadeIn
+        animation coverIn .8s ease-out forwards
+      img
+        height 150px
+        pointer-events none
+    .info
+      display flex
+      flex-direction column
+      justify-content center
+      align-items center
+      width 100%
+      height 100%
+      overflow hidden
+      border-radius 3px
+      background-color hsla(0, 0%, 100%, .7)
+      transition transform .5s cubic-bezier(.6, .2, .1, 1) 0s
+      img
+        position relative
+        top 45px
+        width 80px
+        height 80px
+        border-radius 50%
+        box-shadow 0 0 10px rgba(0, 0, 0, .3)
+        z-index 1
+        text-align center
+        pointer-events none
+      span
+        padding 20px 10% 60px 10%
+        font-size 16px
+        width 100%
+        text-align center
+        box-shadow 0 0 10px rgba(0, 0, 0, .3)
+        background-color hsla(0, 0%, 100%, .7)
+        color var(--font-color)
+        white-space nowrap
+        overflow hidden
+        text-overflow ellipsis
+.flexcard-flink-list>a .info,
+.flexcard-flink-list>a .wrapper .cover
+  position absolute
+  top 0
+  left 0
+
+@media screen and (max-width:1024px)
+  .flexcard-flink-list
+    & > a
+      width calc(33.33333% - 15px)
+
+@media screen and (max-width:600px)
+  .flexcard-flink-list
+    & > a
+      width calc(50% - 15px)
+
+[data-theme=dark]
+  .flexcard-flink-list a .info,
+  .flexcard-flink-list a .info span
+    background-color rgba(0, 0, 0, .6)
+  .flexcard-flink-list
+    & > a
+      &:hover
+        &:before
+          background-color: rgba(#121212,0.8);
+.justified-gallery > div > img,
+.justified-gallery > figure > img,
+.justified-gallery > a > a > img,
+.justified-gallery > div > a > img,
+.justified-gallery > figure > a > img,
+.justified-gallery > a > svg,
+.justified-gallery > div > svg,
+.justified-gallery > figure > svg,
+.justified-gallery > a > a > svg,
+.justified-gallery > div > a > svg,
+.justified-gallery > figure > a > svg
+  position static!important
