--- a/themes/butterfly/layout/archive.pug
+++ b/themes/butterfly/layout/archive.pug
@@ -4,9 +4,9 @@ block content
   include ./includes/mixins/article-sort.pug
   
   #archive
-    #posts-chart.js-pjax
+    //- #posts-chart.js-pjax
+    //- #posts-calendar.js-pjax
     - const archiveLength = findArchiveLength(fragment_cache)
     .article-sort-title= _p('page.articles') + ' - ' + archiveLength
     +articleSort(page.posts)
     include includes/pagination.pug
-    
