--- a/themes/butterfly/source/css/_custom/about/color.css
+++ b/themes/butterfly/source/css/_custom/about/color.css
@@ -52,7 +52,7 @@
     --anzhiyu-pink: #ff7c7c;
     --anzhiyu-green: #57bd6a;
     --anzhiyu-fontcolor: #363636;
-    --anzhiyu-background: #f7f9fe;
+    --anzhiyu-background: #fff;
     --anzhiyu-reverse: #000;
     --anzhiyu-maskbg: rgba(255, 255, 255, 0.6);
     --anzhiyu-maskbgdeep: rgba(255, 255, 255, 0.85);
@@ -83,7 +83,7 @@
     --anzhiyu-pink: #ff7c7c;
     --anzhiyu-green: #57bd6a;
     --anzhiyu-fontcolor: #f7f7fa;
-    --anzhiyu-background: #18171d;
+    --anzhiyu-background: #121212;
     --anzhiyu-reverse: #fff;
     --anzhiyu-maskbg: rgba(0, 0, 0, 0.6);
     --anzhiyu-maskbgdeep: rgba(0, 0, 0, 0.85);
