--- a/themes/butterfly/source/css/_custom/about/about.css
+++ b/themes/butterfly/source/css/_custom/about/about.css
@@ -876,7 +876,7 @@
 
 /*充电按钮的全部CSS*/
 
-  .reward-main {
+  /* .reward-main {
     -webkit-animation: donate_effcet .3s .1s ease both;
     -moz-animation: donate_effcet .3s .1s ease both;
     -o-animation: donate_effcet .3s .1s ease both;
@@ -910,16 +910,16 @@
 
   .post-reward:hover .reward-button>.reward-main {
     display: block;
-  }
+  } */
 
-  .post-reward .reward-main {
+  /* .post-reward .reward-main {
     position: absolute;
     bottom: 40px;
     left: 0;
     z-index: 100;
     display: none;
     padding: 0 0 15px;
-  }
+  } */
 
   /* .post-reward .reward-main .reward-all {
     display: -webkit-box;
@@ -934,16 +934,16 @@
     background: var(--reward-pop);
   } */
 
-  .post-reward .reward-main .reward-all:before {
+  /* .post-reward .reward-main .reward-all:before {
     position: absolute;
     bottom: -10px;
     left: 0;
     width: 100%;
     height: 20px;
     content: '';
-  }
+  } */
 
-  .post-reward .reward-main .reward-all:after {
+  /* .post-reward .reward-main .reward-all:after {
     position: absolute;
     right: 0;
     bottom: 2px;
@@ -977,7 +977,7 @@
   .author-content-item.single.reward .reward-list-updateDate {
     color: var(--anzhiyu-gray);
     font-size: 14px;
-  }
+  } */
 
   @media screen and (max-width:768px) {
     #gitcalendar {
