--- a/themes/butterfly/layout/includes/page/about.pug
+++ b/themes/butterfly/layout/includes/page/about.pug
@@ -156,9 +156,9 @@
     .author-content-item.game-yuanshen
       .card-content
         .author-content-item-tips 爱好游戏
-        span.author-content-item-title 天谕
+        span.author-content-item-title BLUE PROTOCOL
         .content-bottom
-          .tips.game-yuanshen-uid ID: 点卡服/荒弃神祠/渃汐
+          .tips.game-yuanshen-uid ID: kchris
     .author-content-item.comic-content
       .card-content
         .author-content-item-tips 爱好电影
