add game page&open lazyload

--- a/themes/butterfly/layout/page.pug
+++ b/themes/butterfly/layout/page.pug
@@ -14,6 +14,8 @@ block content
         include includes/page/about.pug
       when 'categories'
         include includes/page/categories.pug
+      when 'game'
+        include includes/page/game.pug
       default
         include includes/page/default-page.pug
 
