--- a/source/css/game_page.css
+++ b/source/css/game_page.css
@@ -12,8 +12,8 @@
     border: var(--style-border-always);
     overflow: hidden;
     margin: 8px 6px;
-    background: var(--anzhiyu-card-bg);
-    box-shadow: var(--anzhiyu-shadow-border);
+    background: var(--kchris-card-bg);
+    box-shadow: var(--kchris-shadow-border);
     min-height: 400px;
     position: relative;
   }
@@ -48,7 +48,7 @@
   
   .game-item-content-item-specification {
     font-size: 12px;
-    color: var(--anzhiyu-secondtext);
+    color: var(--kchris-secondtext);
     line-height: 1;
     margin-bottom: 12px;
     white-space: nowrap;
@@ -58,7 +58,7 @@
   
   .game-item-content-item-description {
     line-height: 20px;
-    color: var(--anzhiyu-secondtext);
+    color: var(--kchris-secondtext);
     height: 60px;
     display: -webkit-box;
     overflow: hidden;
@@ -69,7 +69,7 @@
   
   a.game-item-content-item-link {
     font-size: 12px;
-    background: var(--anzhiyu-gray-op);
+    background: var(--kchris-gray-op);
     padding: 4px 8px;
     border-radius: 8px;
     cursor: pointer;
@@ -77,7 +77,7 @@
   
   a.game-item-content-item-link:hover {
     background: #ff7242;
-    color: var(--anzhiyu-white);
+    color: var(--kchris-white);
   }
   
   h2.game-item-title {
@@ -87,13 +87,13 @@
   .game-item-description {
     line-height: 1;
     margin: 4px 0 8px 0;
-    color: var(--anzhiyu-secondtext);
+    color: var(--kchris-secondtext);
   }
   
   .game-item-content-item-cover {
     width: 100%;
     height: 200px;
-    background: var(--anzhiyu-secondbg);
+    background: var(--kchris-secondbg);
     display: flex;
     justify-content: center;
   }
