--- a/themes/butterfly/layout/includes/pagination.pug
+++ b/themes/butterfly/layout/includes/pagination.pug
@@ -6,6 +6,13 @@
     escape: false
   }
 
+  var icat_options = {
+    prev_text: '<i class="fas fa-chevron-left fa-fw"></i><div class="pagination_tips_prev">上页</div>',
+    next_text: '<div class="pagination_tips_next">下页</div><i class="fas fa-chevron-right fa-fw"></i>',
+    mid_size: 1,
+    escape: false
+  }
+
 if is_post()
   - let prev = theme.post_pagination === 1 ? page.prev : page.next
   - let next = theme.post_pagination === 1 ? page.next : page.prev
@@ -38,4 +45,11 @@ else
     .pagination
       if is_home()
         - options.format = 'page/%d/#content-inner'
-      !=paginator(options)
+        !=paginator(icat_options)
+      else
+        !=paginator(options)
+      if is_home()
+        .toPageGroup
+          input#toPageText(maxlength="3" oninput="value=value.replace(/[^0-9]/g,'')" onkeyup="if (this.value === '0') this.value = ''" title="跳转到指定页面")
+          a#toPageButton(data-pjax-state="" onclick="icattoPage.toPage()")
+            i.fa-solid.fa-angles-right
