--- a/themes/butterfly/source/css/_custom/about/color.css
+++ b/themes/butterfly/source/css/_custom/about/color.css
@@ -1,104 +1,104 @@
 /* 颜色 */
 :root {
-    --anzhiyu-theme-op: #4259ef23;
-    --anzhiyu-card-bg-none: rgba(255, 255, 255, 0);
-    --anzhiyu-main-op-deep: var(--anzhiyu-theme-op-deep) !important;
-    --anzhiyu-gray-op: #9999992b;
-    --anzhiyu-theme-top: var(--anzhiyu-theme);
-    --anzhiyu-white: #fff;
-    --anzhiyu-white-op: rgba(255, 255, 255, 0.2);
-    --anzhiyu-black: #000;
-    --anzhiyu-black-op: rgba(0, 0, 0, 0.2);
-    --anzhiyu-none: rgba(0, 0, 0, 0);
-    --anzhiyu-gray: #999999;
-    --anzhiyu-yellow: #ffc93e;
-    --anzhiyu-orange: #e38100;
-    --anzhiyu-border-radius: 8px;
-    --anzhiyu-main: var(--anzhiyu-theme);
-    --anzhiyu-main-op: var(--anzhiyu-theme-op);
-    --anzhiyu-shadow-theme: 0 8px 12px -3px var(--anzhiyu-theme-op);
-    --anzhiyu-shadow-main: 0 8px 12px -3px var(--anzhiyu-main-op);
-    --anzhiyu-shadow-blue: 0 8px 12px -3px rgba(40, 109, 234, 0.2);
-    --anzhiyu-shadow-white: 0 8px 12px -3px rgba(255, 255, 255, 0.2);
-    --anzhiyu-shadow-black: 0 0 12px 4px rgba(0, 0, 0, 0.05);
-    --anzhiyu-shadow-yellow: 0px 38px 77px -26px rgba(255, 201, 62, 0.12);
-    --anzhiyu-shadow-red: 0 8px 12px -3px #ee7d7936;
-    --anzhiyu-shadow-green: 0 8px 12px -3px #87ee7936;
-    --anzhiyu-shadow-border: 0 0 12px 4px #2c2d300c;
-    --anzhiyu-shadow-blackdeep: 0 2px 16px -3px rgba(0, 0, 0, 0.15);
-    --anzhiyu-logo-color: linear-gradient(215deg, #4584ff 30%, #ff7676 70%);
-    --style-border: 1px solid var(--anzhiyu-card-border);
-    --anzhiyu-blue-main: #3b70fc;
-    --style-border-hover: 1px solid var(--anzhiyu-main);
-    --style-border-dashed: 1px dashed var(--anzhiyu-theme-op);
-    --style-border-avatar: 4px solid var(--anzhiyu-background);
-    --style-border-always: 1px solid var(--anzhiyu-card-border);
+    --kchris-theme-op: #4259ef23;
+    --kchris-card-bg-none: rgba(255, 255, 255, 0);
+    --kchris-main-op-deep: var(--kchris-theme-op-deep) !important;
+    --kchris-gray-op: #9999992b;
+    --kchris-theme-top: var(--kchris-theme);
+    --kchris-white: #fff;
+    --kchris-white-op: rgba(255, 255, 255, 0.2);
+    --kchris-black: #000;
+    --kchris-black-op: rgba(0, 0, 0, 0.2);
+    --kchris-none: rgba(0, 0, 0, 0);
+    --kchris-gray: #999999;
+    --kchris-yellow: #ffc93e;
+    --kchris-orange: #e38100;
+    --kchris-border-radius: 8px;
+    --kchris-main: var(--kchris-theme);
+    --kchris-main-op: var(--kchris-theme-op);
+    --kchris-shadow-theme: 0 8px 12px -3px var(--kchris-theme-op);
+    --kchris-shadow-main: 0 8px 12px -3px var(--kchris-main-op);
+    --kchris-shadow-blue: 0 8px 12px -3px rgba(40, 109, 234, 0.2);
+    --kchris-shadow-white: 0 8px 12px -3px rgba(255, 255, 255, 0.2);
+    --kchris-shadow-black: 0 0 12px 4px rgba(0, 0, 0, 0.05);
+    --kchris-shadow-yellow: 0px 38px 77px -26px rgba(255, 201, 62, 0.12);
+    --kchris-shadow-red: 0 8px 12px -3px #ee7d7936;
+    --kchris-shadow-green: 0 8px 12px -3px #87ee7936;
+    --kchris-shadow-border: 0 0 12px 4px #2c2d300c;
+    --kchris-shadow-blackdeep: 0 2px 16px -3px rgba(0, 0, 0, 0.15);
+    --kchris-logo-color: linear-gradient(215deg, #4584ff 30%, #ff7676 70%);
+    --style-border: 1px solid var(--kchris-card-border);
+    --kchris-blue-main: #3b70fc;
+    --style-border-hover: 1px solid var(--kchris-main);
+    --style-border-dashed: 1px dashed var(--kchris-theme-op);
+    --style-border-avatar: 4px solid var(--kchris-background);
+    --style-border-always: 1px solid var(--kchris-card-border);
     --style-border-none: 1px solid transparent;
-    --anzhiyu-white-acrylic1: #fefeff !important;
-    --anzhiyu-white-acrylic2: #fcfdff !important;
-    --anzhiyu-black-acrylic2: #08080a !important;
-    --anzhiyu-black-acrylic1: #0b0b0e !important;
-    --anzhiyu-main-none: #b8b8b800 !important;
+    --kchris-white-acrylic1: #fefeff !important;
+    --kchris-white-acrylic2: #fcfdff !important;
+    --kchris-black-acrylic2: #08080a !important;
+    --kchris-black-acrylic1: #0b0b0e !important;
+    --kchris-main-none: #b8b8b800 !important;
   }
   
   [data-theme="light"] {
-    --anzhiyu-theme-op-deep: #4259efdd;
+    --kchris-theme-op-deep: #4259efdd;
     /* --global-bg: #f7f9fe; */
-    --anzhiyu-theme: #3b70fc;
-    --anzhiyu-theme-deep: #1856fb;
-    --anzhiyu-theme-op: #4259ef23;
-    --anzhiyu-blue: #3b70fc;
-    --anzhiyu-red: #d8213c;
-    --anzhiyu-pink: #ff7c7c;
-    --anzhiyu-green: #57bd6a;
-    --anzhiyu-fontcolor: #363636;
-    --anzhiyu-background: #fff;
-    --anzhiyu-reverse: #000;
-    --anzhiyu-maskbg: rgba(255, 255, 255, 0.6);
-    --anzhiyu-maskbgdeep: rgba(255, 255, 255, 0.85);
-    --anzhiyu-hovertext: var(--anzhiyu-theme);
-    --anzhiyu-ahoverbg: #f7f7fa;
-    --anzhiyu-lighttext: var(--anzhiyu-main);
-    --anzhiyu-secondtext: rgba(60, 60, 67, 0.6);
-    --anzhiyu-scrollbar: rgba(60, 60, 67, 0.4);
-    --anzhiyu-card-btn-bg: #edf0f7;
-    --anzhiyu-post-blockquote-bg: #fafcff;
-    --anzhiyu-post-tabs-bg: #f2f5f8;
-    --anzhiyu-secondbg: #f1f3f8;
-    --anzhiyu-shadow-nav: 0 5px 12px -5px rgba(102, 68, 68, 0.05);
-    --anzhiyu-card-bg: #fff;
-    --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
-    --anzhiyu-shadow-light2black: 0 5px 12px -5px rgba(102, 68, 68, 0);
-    --anzhiyu-card-border: #e3e8f7;
+    --kchris-theme: #3b70fc;
+    --kchris-theme-deep: #1856fb;
+    --kchris-theme-op: #4259ef23;
+    --kchris-blue: #3b70fc;
+    --kchris-red: #d8213c;
+    --kchris-pink: #ff7c7c;
+    --kchris-green: #57bd6a;
+    --kchris-fontcolor: #363636;
+    --kchris-background: #fff;
+    --kchris-reverse: #000;
+    --kchris-maskbg: rgba(255, 255, 255, 0.6);
+    --kchris-maskbgdeep: rgba(255, 255, 255, 0.85);
+    --kchris-hovertext: var(--kchris-theme);
+    --kchris-ahoverbg: #f7f7fa;
+    --kchris-lighttext: var(--kchris-main);
+    --kchris-secondtext: rgba(60, 60, 67, 0.6);
+    --kchris-scrollbar: rgba(60, 60, 67, 0.4);
+    --kchris-card-btn-bg: #edf0f7;
+    --kchris-post-blockquote-bg: #fafcff;
+    --kchris-post-tabs-bg: #f2f5f8;
+    --kchris-secondbg: #f1f3f8;
+    --kchris-shadow-nav: 0 5px 12px -5px rgba(102, 68, 68, 0.05);
+    --kchris-card-bg: #fff;
+    --kchris-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
+    --kchris-shadow-light2black: 0 5px 12px -5px rgba(102, 68, 68, 0);
+    --kchris-card-border: #e3e8f7;
   }
   
   [data-theme="dark"] {
-    --anzhiyu-theme-op-deep: #0084ffdd;
+    --kchris-theme-op-deep: #0084ffdd;
     /* --global-bg: #18171d; */
-    --anzhiyu-theme: #0084ff;
-    --anzhiyu-theme-deep: #0076e5;
-    --anzhiyu-theme-op: #0084ff23;
-    --anzhiyu-blue: #0084ff;
-    --anzhiyu-red: #ff3842;
-    --anzhiyu-pink: #ff7c7c;
-    --anzhiyu-green: #57bd6a;
-    --anzhiyu-fontcolor: #f7f7fa;
-    --anzhiyu-background: #121212;
-    --anzhiyu-reverse: #fff;
-    --anzhiyu-maskbg: rgba(0, 0, 0, 0.6);
-    --anzhiyu-maskbgdeep: rgba(0, 0, 0, 0.85);
-    --anzhiyu-hovertext: #0a84ff;
-    --anzhiyu-ahoverbg: #fff;
-    --anzhiyu-lighttext: #f2b94b;
-    --anzhiyu-secondtext: #a1a2b8;
-    --anzhiyu-scrollbar: rgba(200, 200, 223, 0.4);
-    --anzhiyu-card-btn-bg: #30343f;
-    --anzhiyu-post-blockquote-bg: #000;
-    --anzhiyu-post-tabs-bg: #121212;
-    --anzhiyu-secondbg: #30343f;
-    --anzhiyu-shadow-nav: 0 5px 20px 0px rgba(28, 28, 28, 0.4);
-    --anzhiyu-card-bg: #121212;
-    --anzhiyu-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
-    --anzhiyu-shadow-light2black: 0 5px 12px -5px rgba(102, 68, 68, 0);
-    --anzhiyu-card-border: #42444a;
+    --kchris-theme: #0084ff;
+    --kchris-theme-deep: #0076e5;
+    --kchris-theme-op: #0084ff23;
+    --kchris-blue: #0084ff;
+    --kchris-red: #ff3842;
+    --kchris-pink: #ff7c7c;
+    --kchris-green: #57bd6a;
+    --kchris-fontcolor: #f7f7fa;
+    --kchris-background: #121212;
+    --kchris-reverse: #fff;
+    --kchris-maskbg: rgba(0, 0, 0, 0.6);
+    --kchris-maskbgdeep: rgba(0, 0, 0, 0.85);
+    --kchris-hovertext: #0a84ff;
+    --kchris-ahoverbg: #fff;
+    --kchris-lighttext: #f2b94b;
+    --kchris-secondtext: #a1a2b8;
+    --kchris-scrollbar: rgba(200, 200, 223, 0.4);
+    --kchris-card-btn-bg: #30343f;
+    --kchris-post-blockquote-bg: #000;
+    --kchris-post-tabs-bg: #121212;
+    --kchris-secondbg: #30343f;
+    --kchris-shadow-nav: 0 5px 20px 0px rgba(28, 28, 28, 0.4);
+    --kchris-card-bg: #121212;
+    --kchris-shadow-lightblack: 0 5px 12px -5px rgba(102, 68, 68, 0);
+    --kchris-shadow-light2black: 0 5px 12px -5px rgba(102, 68, 68, 0);
+    --kchris-card-border: #42444a;
   }
