--- a/themes/butterfly/source/css/_custom/about/color.css
+++ b/themes/butterfly/source/css/_custom/about/color.css
@@ -90,7 +90,7 @@
     --kchris-hovertext: #0a84ff;
     --kchris-ahoverbg: #fff;
     --kchris-lighttext: #f2b94b;
-    --kchris-secondtext: #a1a2b8;
+    --kchris-secondtext: #b8b8b8;
     --kchris-scrollbar: rgba(200, 200, 223, 0.4);
     --kchris-card-btn-bg: #30343f;
     --kchris-post-blockquote-bg: #000;
