修改个人游戏页面描述

--- a/themes/butterfly/layout/includes/page/about.pug
+++ b/themes/butterfly/layout/includes/page/about.pug
@@ -156,9 +156,9 @@
     .author-content-item.game-yuanshen
       .card-content
         .author-content-item-tips 爱好游戏
-        span.author-content-item-title BLUE PROTOCOL
+        span.author-content-item-title 鸣潮
         .content-bottom
-          .tips.game-yuanshen-uid ID: kchris
+          .tips.game-yuanshen-uid ID: 108511537
     .author-content-item.comic-content
       .card-content
         .author-content-item-tips 爱好电影
