--- a/themes/butterfly/source/css/_custom/about/about.css
+++ b/themes/butterfly/source/css/_custom/about/about.css
@@ -647,7 +647,7 @@
     transition: 2s ease-in-out;
   }
   .author-content-item.game-yuanshen {
-    background: url(/img/about/blue-protocol02.png) no-repeat top;
+    background: url(https://mc.kurogames.com/static4.0/assets/rinascita-06-b8503d26.webp) no-repeat top;
     background-size: cover;
     min-height: 300px;
     overflow: hidden;
